--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto PRG04</title>
+    <link rel="shortcut icon" href="assests/icons/favicon.ico" >
+    <title>Gerenciador de Tarefas - Projeto PRG04</title>
 </head>
 <body>
     <h1>Olá, mundo!</h1>
