feat(atividade-3): criar página da atividade 3 com lista, imagem dinâmica e icon

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Olá, mundo!</h1>
+    <a href="./pages/atividade-3/atividade-3.html">Ir para a Atividade 3</a>
 </body>
 </html>
