fix(atividade-3): corrigir imagem dinâmica

--- a/pages/atividade-3/atividade-3.html
+++ b/pages/atividade-3/atividade-3.html
@@ -18,8 +18,12 @@
     </ul>
 
     <h3>Imagem Dinâmica</h3>
-    <img src="https://picsum.photos/400/300" alt="Imagem dinâmica">
-    
+    <picture
+        <source media="(max-width: 1050px)" srcset="cat-codando.png" type="image/png">
+        <img src="/PRG04-Programacao-Web/assests/images/cat-codando.png" alt="Imagem dinâmica">
+    </picture>
+
+
     <br>
     <a href="../../index.html">Voltar para a página inicial</a>
 </body>
