fix(atividade-3): corrigir caminho até a imagem "cat-codando"

--- a/pages/atividade-3/atividade-3.html
+++ b/pages/atividade-3/atividade-3.html
@@ -18,9 +18,10 @@
     </ul>
 
     <h3>Imagem Dinâmica</h3>
-    <picture
-        <source media="(max-width: 1050px)" srcset="cat-codando.png" type="image/png">
-        <img src="/PRG04-Programacao-Web/assests/images/cat-codando.png" alt="Imagem dinâmica">
+    <picture>
+        <source media="(max-width: 1050px)" srcset="/PRG04-Programacao-Web/assests/images/cat-codando.png">
+
+        <img src="/PRG04-Programacao-Web/assests/images/cat-codando.png" alt="Um gato programando em um computador.">
     </picture>
 
 
