--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Olá, mundo!</h1>
     <a href="./pages/atividade-3/atividade-3.html">Ir para a Atividade 3</a>
+    <br>
+    <a href="/pages/atividade-4/atividade-4.html">Ir para a Atividade 4</a>
+
 </body>
 </html>
