--- a/pages/atividade-4/atividade-4.html
+++ b/pages/atividade-4/atividade-4.html
@@ -6,7 +6,7 @@
     <title>Atividade 4 - Sandbox</title>
     <link rel="shortcut icon" href="../../assests/icons/favicon.ico">
 
-    <link rel="stylesheet" href="/assests/css/style.css">
+    <link rel="stylesheet" href="../../assests/css/style.css">
 </head>
 <body>
     <h1>Atividade 4 - Sandbox</h1>
@@ -14,8 +14,8 @@
 
     <h2>Áudio</h2>
     <audio preload="metadata" controls>
-        <source src="/assests/audio/churrasqueira.mp3">
-        <p>Seu navegador não suporta áudio. <a href="/assests/audio/churrasqueira.mp3"
+        <source src="../../assests/audio/churrasqueira.mp3">
+        <p>Seu navegador não suporta áudio. <a href="../../assests/audio/churrasqueira.mp3"
             download="churrasqueira.mp3" type="audio/mpeg"></a></p>
     </audio>
     
