fix(sandbox): arrumar todo projeto adicionando a parte de sandbox das atividades

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assests/icons/favicon.ico" >
     <title>Gerenciador de Tarefas - Projeto PRG04</title>
+    <link rel="stylesheet" href="/assests/css/style.css">
 </head>
 <body>
     <h1>Olá, mundo!</h1>
-    <a href="./pages/atividade-3/atividade-3.html">Ir para a Atividade 3</a>
-    <br>
-    <a href="./pages/atividade-4/atividade-4.html">Ir para a Atividade 4</a>
+    <h2>SandBox - Atividades</h2>
+    <a href="./pages/sandbox-atividades/sandbox.html">Ir para a Área Sandbox das Atividades</a>
+    
 
 </body>
 </html>
