--- a/pages/sandbox-atividades/atividade-3/atividade-3.html
+++ b/pages/sandbox-atividades/atividade-3/atividade-3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 3</title>
     
-    <link rel="shortcut icon" href="../../assests/icons/favicon.ico">
+    <link rel="shortcut icon" href="../../../assests/icons/favicon.ico">
 </head>
 <body>
     <h1>Atividade 3</h1>
@@ -19,13 +19,13 @@
 
     <h3>Imagem Dinâmica</h3>
     <picture>
-        <source media="(max-width: 1050px)" srcset="/PRG04-Programacao-Web/assests/images/cat-codando.png">
+        <source media="(max-width: 1050px)" srcset="../../../assests/images/cat-codando.png">
 
-        <img src="/PRG04-Programacao-Web/assests/images/cat-codando.png" alt="Um gato programando em um computador.">
+        <img src="../../../assests/images/cat-codando.png" alt="Um gato programando em um computador.">
     </picture>
 
 
     <br>
-    <a href="../../index.html">Voltar para a página inicial</a>
+    <a href="../../sandbox-atividades/sandbox.html">Voltar para a área SandBox</a>
 </body>
 </html>
