--- a/pages/sandbox-atividades/atividade-4/atividade-4.html
+++ b/pages/sandbox-atividades/atividade-4/atividade-4.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 4 - Sandbox</title>
-    <link rel="shortcut icon" href="../../assests/icons/favicon.ico">
+    <link rel="shortcut icon" href="../../../assests/icons/favicon.ico">
 
-    <link rel="stylesheet" href="../../assests/css/style.css">
+    <link rel="stylesheet" href="../../../assests/css/style.css">
 </head>
 <body>
     <h1>Atividade 4 - Sandbox</h1>
@@ -14,8 +14,8 @@
 
     <h2>Áudio</h2>
     <audio preload="metadata" controls>
-        <source src="../../assests/audio/churrasqueira.mp3">
-        <p>Seu navegador não suporta áudio. <a href="../../assests/audio/churrasqueira.mp3"
+        <source src="../../../assests/audio/churrasqueira.mp3">
+        <p>Seu navegador não suporta áudio. <a href="../../../assests/audio/churrasqueira.mp3"
             download="churrasqueira.mp3" type="audio/mpeg"></a></p>
     </audio>
     
@@ -23,7 +23,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/RhOwyHWGqWg?si=yNOtk8yGkLLdtpWr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <br>
-    <a href="../../index.html">Voltar para a página inicial</a>
+    <a href="../../sandbox-atividades/sandbox.html">Voltar para a área SandBox</a>
 
 </body>
 </html>
