--- a/pages/sandbox-atividades/atividade-3/atividade-3.html
+++ b/pages/sandbox-atividades/atividade-3/atividade-3.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 3</title>
     
-    <link rel="shortcut icon" href="../../../assests/icons/favicon.ico">
+    <link rel="shortcut icon" href="../../../assests/icons/favicon2.ico">
+    <link rel="stylesheet" href="../../../assests/css/style.css">
 </head>
 <body>
     <h1>Atividade 3</h1>
