--- a/pages/sandbox-atividades/sandbox.html
+++ b/pages/sandbox-atividades/sandbox.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandbox das Atividades</title>
-    <link rel="shortcut icon" href="../../assests/icons/favicon.ico">
+    <link rel="shortcut icon" href="../../assests/icons/favicon2.ico">
 
     <link rel="stylesheet" href="../../assests/css/style.css">
 </head>
