--- a/pages/sandbox-atividades/sandbox.html
+++ b/pages/sandbox-atividades/sandbox.html
@@ -15,6 +15,8 @@
     <a href="../../pages/sandbox-atividades/atividade-3/atividade-3.html">Ir para a Atividade 3</a>
     <br>
     <a href="../../pages/sandbox-atividades/atividade-4/atividade-4.html">Ir para a Atividade 4</a>
+    <br>
+    <a href="../../pages/sandbox-atividades/atividade-5/atividade-5.html">Ir para a Atividade 5</a>
 
     <br>
     <a href="../../index.html">Voltar à página inicial</a>
