fix (index): arrumar o caminho assets

--- a/pages/sandbox-atividades/atividade-3/atividade-3.html
+++ b/pages/sandbox-atividades/atividade-3/atividade-3.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 3</title>
     
-    <link rel="shortcut icon" href="../../../assests/icons/favicon2.ico">
-    <link rel="stylesheet" href="../../../assests/css/style.css">
+    <link rel="shortcut icon" href="../../../assets/icons/favicon2.ico">
+    <link rel="stylesheet" href="../../../assets/css/style.css">
 </head>
 <body>
     <h1>Atividade 3</h1>
@@ -20,9 +20,9 @@
 
     <h3>Imagem Dinâmica</h3>
     <picture>
-        <source media="(max-width: 1050px)" srcset="../../../assests/images/cat-codando.png">
+        <source media="(max-width: 1050px)" srcset="../../../assets/images/cat-codando.png">
 
-        <img src="../../../assests/images/cat-codando.png" alt="Um gato programando em um computador.">
+        <img src="../../../assets/images/cat-codando.png" alt="Um gato programando em um computador.">
     </picture>
 
 
