--- a/pages/sandbox-atividades/atividade-4/atividade-4.html
+++ b/pages/sandbox-atividades/atividade-4/atividade-4.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 4 - Sandbox</title>
-    <link rel="shortcut icon" href="../../../assests/icons/favicon2.ico">
-
-    <link rel="stylesheet" href="../../../assests/css/style.css">
+    <link rel="shortcut icon" href="../../../assets/icons/favicon2.ico">
+    <link rel="stylesheet" href="../../../assets/css/style.css">
 </head>
 <body>
     <h1>Atividade 4 - Sandbox</h1>
@@ -14,8 +13,8 @@
 
     <h2>Áudio</h2>
     <audio preload="metadata" controls>
-        <source src="../../../assests/audio/churrasqueira.mp3">
-        <p>Seu navegador não suporta áudio. <a href="../../../assests/audio/churrasqueira.mp3"
+        <source src="../../../assets/audio/churrasqueira.mp3">
+        <p>Seu navegador não suporta áudio. <a href="../../../assets/audio/churrasqueira.mp3"
             download="churrasqueira.mp3" type="audio/mpeg"></a></p>
     </audio>
     
