--- a/pages/sandbox-atividades/atividade-5/atividade-5.html
+++ b/pages/sandbox-atividades/atividade-5/atividade-5.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <title>Atividade 5 - Paleta do Projeto</title>
-    <link rel="shortcut icon" href="../../../assests/icons/favicon2.ico">
-    <link rel="stylesheet" href="../../../assests/css/style.css">
+    <link rel="shortcut icon" href="../../../assets/icons/favicon2.ico">
+    <link rel="stylesheet" href="../../../assets/css/style.css">
 </head>
 <body>
     
