feat (project): adicionar menu e o sistema de caixas

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <h1 class="logo">🎮 GameLog</h1>
             <nav id="menu">
                 <ul>
+                    <li><a href="index.html" class="btn">Home</a> </li>
                     <li><a href="#" class="btn">Login</a></li>
+                    <li><a href="/pages/sandbox-atividades/sandbox.html" class="btn">Sandbox</a></li>
                 </ul>
             </nav>
         </header>
@@ -23,13 +25,8 @@
         <main>
             <h2>Bem-vindo ao GameLog</h2>
             <p>Sua plataforma para organizar e avaliar seus jogos favoritos.</p>
-            <p>Acesse a área de atividades no final da página.</p>
+            <p>Acesse a área de atividades na aba de Sandbox do MENU.</p>
         </main>
-        
-        <section class="sandbox-link">
-            <h2>SandBox - Atividades</h2>
-            <a href="./pages/sandbox-atividades/sandbox.html">Ir para a Área Sandbox das Atividades</a>
-        </section>
 
         <footer>
             <p>&copy; 2025 GameLog. Todos os direitos reservados.</p>
