--- a/pages/sandbox-atividades/atividade-3/atividade-3.html
+++ b/pages/sandbox-atividades/atividade-3/atividade-3.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="../../../assets/css/style.css">
 </head>
 <body>
+    <header id="cabecalho">
+            <h1 class="logo">🎮 GameLog</h1>
+            <nav id="menu">
+                <ul>
+                    <li><a href="../../../index.html" class="btn">Home</a> </li>
+                    <li><a href="#" class="btn">Login</a></li>
+                    <li><a href="/pages/sandbox-atividades/sandbox.html" class="btn">Sandbox</a></li>
+                </ul>
+            </nav>
+        </header>
     <h1>Atividade 3</h1>
     
     <h3>Minha Lista</h3>
