--- a/pages/sandbox-atividades/atividade-5/atividade-5.html
+++ b/pages/sandbox-atividades/atividade-5/atividade-5.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="../../../assets/css/style.css">
 </head>
 <body>
-    
+    <header id="cabecalho">
+            <h1 class="logo">🎮 GameLog</h1>
+            <nav id="menu">
+                <ul>
+                    <li><a href="../../../index.html" class="btn">Home</a> </li>
+                    <li><a href="#" class="btn">Login</a></li>
+                    <li><a href="/pages/sandbox-atividades/sandbox.html" class="btn">Sandbox</a></li>
+                </ul>
+            </nav>
+        </header>
     <main>
         <p style="margin-bottom: 30px;"><a href="../../../pages/sandbox-atividades/sandbox.html">&larr; Voltar para a SandBox</a></p>
 
