--- a/pages/sandbox-atividades/sandbox.html
+++ b/pages/sandbox-atividades/sandbox.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandbox das Atividades</title>
-    <link rel="shortcut icon" href="../../assests/icons/favicon2.ico">
+    <link rel="shortcut icon" href="../../assets/icons/favicon2.ico">
 
-    <link rel="stylesheet" href="../../assests/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
 <body>
+    <header id="cabecalho">
+            <h1 class="logo">🎮 GameLog</h1>
+            <nav id="menu">
+                <ul>
+                    <li><a href="../../index.html" class="btn">Home</a> </li>
+                    <li><a href="#" class="btn">Login</a></li>
+                    <li><a href="/pages/sandbox-atividades/sandbox.html" class="btn">Sandbox</a></li>
+                </ul>
+            </nav>
+        </header>
     <h1>Sandbox das Atividades</h1>
     <p1>Aqui ficará as os links para as atividades da disciplina Programação Web.</p1>
     <br>
