update (index.html): adicionando comentários

--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
 
     <div id="interface">
 
+        `Header do Projeto - Menu`
         <header id="cabecalho">
             <h1 class="logo">🎮 GameLog</h1>
             <nav id="menu">
                 <ul>
-                    <li><a href="index.html" class="btn">Home</a> </li>
                     <li><a href="#" class="btn">Login</a></li>
                     <li><a href="/pages/sandbox-atividades/sandbox.html" class="btn">Sandbox</a></li>
                 </ul>
             </nav>
         </header>
 
+        `Parte principal`
         <main>
             <h2>Bem-vindo ao GameLog</h2>
             <p>Sua plataforma para organizar e avaliar seus jogos favoritos.</p>
             <p>Acesse a área de atividades na aba de Sandbox do MENU.</p>
         </main>
 
+        `Rodapé da página`
         <footer>
             <p>&copy; 2025 GameLog. Todos os direitos reservados.</p>
         </footer>
