--- a/pages/sandbox-atividades/atividade-4/atividade-4.html
+++ b/pages/sandbox-atividades/atividade-4/atividade-4.html
@@ -14,8 +14,9 @@
             <h1 class="logo">🎮 GameLog</h1>
             <nav id="menu">
                 <ul>
-                    <li><a href="../sandbox.html" class="btn">Sandbox</a></li>
                     <li><a href="#" class="btn">Login</a></li>
+                    <li><a href="../../../index.html" class="btn">Home</a></li>
+                    <li><a href="../sandbox.html" class="btn">Sandbox</a></li>
                 </ul>
             </nav>
         </header>
