update(atividades): atualizar todas atividades para combinar com o projeto
atividade-3 & atividade-4 alteradas

--- a/pages/sandbox-atividades/atividade-3/atividade-3.html
+++ b/pages/sandbox-atividades/atividade-3/atividade-3.html
@@ -23,18 +23,21 @@
     
         <main>
             <h1>Atividade 3</h1>
-            <h3>Minha Lista</h3>
+            <h3>Minha Lista de Jogos</h3>
             <ul>
-                <li>Carro</li>
-                <li>Moto</li>
-                <li>Trem</li>
+                <li>Minecraft</li>
+                <li>Bloons TD 6</li>
+                <li>Brawl Stars</li>
+                <li>Stardew Valley</li>
+                <li>Terraria</li>
+                <li>Celeste</li>
             </ul>
             
             <h3>Imagem Dinâmica e Responsiva</h3>
             <p>Esta imagem irá se ajustar ao tamanho da tela.</p>
             <picture>
-                <source media="(max-width: 1050px)" srcset="../../../assets/images/cat-codando.png">
-                <img src="../../../assets/images/cat-codando.png" alt="Um gato programando em um computador.">
+                <source media="(max-width: 1050px)" srcset="../../../assets/images/terraria-capa.png">
+                <img src="../../../assets/images/terraria-capa.png" alt="Um gato programando em um computador.">
             </picture>
         </main>
 
