--- a/pages/sandbox-atividades/atividade-4/atividade-4.html
+++ b/pages/sandbox-atividades/atividade-4/atividade-4.html
@@ -27,13 +27,13 @@
 
             <h2>Áudio</h2>
             <audio preload="metadata" controls>
-                <source src="../../../assets/audio/churrasqueira.mp3">
+                <source src="../../../assets/audio/terraria-ost-corruption.mp3">
                 <p>Seu navegador não suporta áudio.</p>
             </audio>
             
             <h2>Vídeo Externo Responsivo</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/RhOwyHWGqWg?si=yNOtk8yGkLLdtpWr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4-cT9n8QNAk?si=yB2XWWz3jLSiEpEC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </main>
 
