feat(login & admin): adicionar pagina de login e admin
Admin usando tabelas aprendido em sala e adicionando ao style.css

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameLog - Descubra e Avalie Jogos</title>
-    <link rel="shortcut icon" href="assets/icons/favicon2.ico">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="../../assets/icons/favicon2.ico">
+    <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
             <h1 class="logo">🎮 GameLog</h1>
             <nav id="menu">
                 <ul>
-                    <li><a href="#" class="btn">Login</a></li>
+                    <li><a href="../auth/login.html" class="btn">Login</a></li>
                     <li><a href="/pages/sandbox-atividades/sandbox.html" class="btn">Sandbox</a></li>
                 </ul>
             </nav>
