--- a/pages/sandbox-atividades/atividade-5/atividade-5.html
+++ b/pages/sandbox-atividades/atividade-5/atividade-5.html
@@ -17,7 +17,7 @@
             <nav id="menu">
                 <ul>
                     <li><a href="#" class="btn">Login</a></li>
-                    <li><a href="../../../index.html" class="btn">Home</a></li>
+                    <li><a href="../../home/index.html" class="btn">Home</a></li>
                     <li><a href="../sandbox.html" class="btn">Sandbox</a></li>
                 </ul>
             </nav>
