--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -14,8 +14,7 @@
             <h1 class="logo">🎮 GameLog</h1>
             <nav id="menu">
                 <ul>
-                    <li><a href="../home/index.html" class="btn">Home</a></li>
-                    <li><a href="../sandbox-atividades/sandbox.html" class="btn">Sandbox</a></li>
+                    <li><a href="../home/index.html" class="btn">Sair</a></li>
                 </ul>
             </nav>
         </header>
