--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -14,7 +14,7 @@
             <h1 class="logo">🎮 GameLog</h1>
             <nav id="menu">
                 <ul>
-                    <li><a href="../home/index.html" class="btn">Sair</a></li>
+                    <li><a href="../../index.html" class="btn">Sair</a></li>
                 </ul>
             </nav>
         </header>
@@ -24,42 +24,22 @@
             <p>Lista de usuários cadastrados no sistema.</p>
 
             <table class="admin-table">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Nome</th>
-                        <th>E-mail</th>
-                        <th>Ações</th>
+            <thead>
+                <tr>
+                    <th>Usuário</th>
+                    <th>Email</th>
+                    <th>Ações</th>
                     </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Jeovani</td>
-                        <td>jeo@email.com</td>
-                        <td>
-                            <a href="#" class="btn-action edit">Editar</a>
-                            <a href="#" class="btn-action delete">Excluir</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Maria</td>
-                        <td>maria@email.com</td>
-                        <td>
-                            <a href="#" class="btn-action edit">Editar</a>
-                            <a href="#" class="btn-action delete">Excluir</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Carlos</td>
-                        <td>carlos@email.com</td>
-                        <td>
-                            <a href="#" class="btn-action edit">Editar</a>
-                            <a href="#" class="btn-action delete">Excluir</a>
-                        </td>
-                    </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td data-label="Usuário">Teste Usuario</td>
+                <td data-label="Email">teste@gmail.com</td>
+                <td data-label="Ações">
+                    <a href="#" class="btn-action edit">Editar</a>
+                    <a href="#" class="btn-action delete">Excluir</a>
+                </td>
+                </tr>
                 </tbody>
             </table>
         </main>
