--- a/pages/sandbox-atividades/atividade-5/atividade-5.html
+++ b/pages/sandbox-atividades/atividade-5/atividade-5.html
@@ -16,8 +16,8 @@
             <h1 class="logo">🎮 GameLog</h1>
             <nav id="menu">
                 <ul>
-                    <li><a href="../../home/index.html" class="btn">Home</a></li>
-                    <li><a href="../sandbox.html" class="btn">Sandbox</a></li>
+                    <li><a href="../../../index.html" class="btn">Home</a></li>
+                    <li><a href="../sandbox.html" class="btn">Voltar</a></li>
                 </ul>
             </nav>
         </header>
