--- a/pages/sandbox-atividades/sandbox.html
+++ b/pages/sandbox-atividades/sandbox.html
@@ -16,7 +16,7 @@
             <h1 class="logo">🎮 GameLog</h1>
             <nav id="menu">
                 <ul>
-                    <li><a href="../home/index.html" class="btn">Home</a></li>
+                    <li><a href="../../index.html" class="btn">Voltar</a></li>
                 </ul>
             </nav>
         </header>
