update (index.html): Arrumar diretorio do favicon e css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameLog - Descubra e Avalie Jogos</title>
-    <link rel="shortcut icon" href="../../assets/icons/favicon2.ico">
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="shortcut icon" href="assets/icons/favicon2.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
