update: Arrumar diretorio ao clicar na logo

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
                 <div class="container-fluid">
-                    <a class="navbar-brand logo" href="#">🎮 GameLog</a>
+                    <a class="navbar-brand logo" href="../../index.html">🎮 GameLog</a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,6 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto"> 
                             <li class="nav-item">
-                                <a class="nav-link btn btn-success mx-1" href="../../index.html">Sobre</a>
                                 <a class="nav-link btn btn-success mx-1" href="../sandbox-atividades/sandbox.html">Sandbox</a>
                                 <a class="nav-link btn btn-success mx-1" href="../auth/login.html">Login</a> 
                             </li>
