--- a/pages/jogos/hades/sobre-hades.html
+++ b/pages/jogos/hades/sobre-hades.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
                 <div class="container-fluid">
-                    <a class="navbar-brand logo" href="#">🎮 GameLog</a>
+                    <a class="navbar-brand logo" href="../../../index.html">🎮 GameLog</a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,67 @@
             </nav>
         </header>
         <main>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h1 class="display-4 border-bottom pb-2">Hades</h1>
+                </div>
+            </div>
 
+            <div class="row">
+
+                <div class="col-lg-8">
+                    <p class="lead">
+                        Hades é um jogo eletrônico de ação e RPG do gênero *roguelike* desenvolvido e publicado pela Supergiant Games. 
+                        Aclamado pela crítica, o jogo venceu diversos prêmios de "Jogo do Ano" (GOTY) e é conhecido por sua jogabilidade viciante, 
+                        direção de arte deslumbrante e uma narrativa que se desenrola a cada tentativa de fuga.
+                    </p>
+
+                    <img src="../../../assets/images/jogos/hades-promo-art.png" 
+                         class="img-fluid rounded shadow-sm mb-4" 
+                         alt="Arte promocional do jogo Hades">
+
+                    <h2 class="mt-4">A Trama: Fuga do Submundo</h2>
+                    <p>
+                        Você joga como **Zagreus**, o príncipe do Submundo e filho de Hades. Cansado da vida sob o domínio de seu pai, Zagreus decide 
+                        escapar de Tártaro e do resto do reino dos mortos para se juntar aos seus parentes no Monte Olimpo.
+                    </p>
+                    <p>
+                        Sua jornada é auxiliada pelos deuses do Olimpo (como Zeus, Atena, Poseidon e outros), que lhe concedem "Bênçãos" 
+                        (poderes e melhorias) para ajudá-lo a lutar contra as hordas de inimigos. A morte é uma parte central do jogo: a cada falha, 
+                        Zagreus é enviado de volta ao Palácio de Hades, onde pode interagir com outros personagens, fortalecer suas habilidades 
+                        permanentes e tentar a fuga novamente.
+                    </p>
+
+                    <h2 class="mt-4">Jogabilidade e Recursos</h2>
+                    <ul>
+                        <li><strong>Ação Frenética:</strong> Combate *hack-and-slash* rápido que exige reflexos e estratégia.</li>
+                        <li><strong>Bênçãos dos Deuses:</strong> Combine poderes de diferentes deuses para criar *builds* únicas a cada partida.</li>
+                        <li><strong>Meta-progressão:</strong> Use recursos coletados para desbloquear melhorias permanentes, novas armas (Armas Infernais) e habilidades no Espelho da Noite.</li>
+                        <li><strong>Narrativa Emergente:</strong> A história avança a cada tentativa, seja ela um sucesso ou um fracasso, com milhares de linhas de diálogo.</li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="card bg-dark text-light border-secondary mb-4">
+                        <div class="card-header">
+                            Ficha Técnica
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-unstyled">
+                                <li><strong>Desenvolvedora:</strong> Supergiant Games</li>
+                                <li><strong>Gênero:</strong> Roguelike, Ação RPG</li>
+                                <li><strong>Lançamento:</strong> 17 de setembro de 2020</li>
+                                <li><strong>Plataformas:</strong> PC, Nintendo Switch, PlayStation, Xbox</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <h3 class="h5">Trailer de Lançamento</h3>
+                    <div class="ratio ratio-16x9 rounded overflow-hidden shadow-sm">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/91t0ha9x0AE?si=U1mtoqZt3W3AeS1L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <p>&copy; 2025 GameLog. Todos os direitos reservados.</p>
