--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -48,6 +48,17 @@
                 </div>
             </a>
         </div>
+        <div class="col">
+                <a href="../jogos/btd6/sobre-btd6.html" class="card h-100 text-decoration-none text-light"> 
+                 <img src="../../assets/images/jogos/btd6-thumbnail.jpg" class="card-img-top" alt="Thumbnail do jogo Hades">
+                
+                <div class="card-body bg-dark"> 
+                    <h5 class="card-title">Bloons TD 6</h5> 
+                    <p class="card-text text-muted">Gênero: Tower Defense</p> 
+                    <p class="card-text">Avaliação: ⭐⭐⭐⭐</p>
+                </div>
+            </a>
+        </div>
 
     </div> 
 </main>
