fix(home): arrumar estrelas que não foi implementado sistema ainda

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -44,7 +44,7 @@
                 <div class="card-body bg-dark"> 
                     <h5 class="card-title">Hades</h5> 
                     <p class="card-text text-muted">Gênero: Roguelike, Ação</p> 
-                    <p class="card-text">Avaliação: ⭐⭐⭐⭐⭐</p>
+                    <p class="card-text">Avaliação: ---</p>
                 </div>
             </a>
         </div>
@@ -55,7 +55,7 @@
                 <div class="card-body bg-dark"> 
                     <h5 class="card-title">Bloons TD 6</h5> 
                     <p class="card-text text-muted">Gênero: Tower Defense</p> 
-                    <p class="card-text">Avaliação: ⭐⭐⭐⭐</p>
+                    <p class="card-text">Avaliação: ---</p>
                 </div>
             </a>
         </div>
