--- a/pages/jogos/btd6/sobre-btd6.html
+++ b/pages/jogos/btd6/sobre-btd6.html
@@ -32,6 +32,7 @@
         </header>
         <main class="text-center py-5"> 
             <p class="lead text-secondary">Em construção...</p> 
+            <a class="nav-link btn btn-success" href="../../home/home.html">Voltar</a>
         </main>
         <footer>
             <p>&copy; 2025 GameLog. Todos os direitos reservados.</p>
